# MCOP-Framework-2.0

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  COMPARISONS.md  CONTRIBUTING.md  CONTRIBUTOR_ONBOARDING.md  DEPLOYMENT.md  Dockerfile  GOVERNANCE.md  INTEGRATIONS.md  LICENSE  LICENSE-MIT-INTEGRATIONS  LICENSE-MIT-LEGACY  Makefile  NOTICE.md  PLAIN_ENGLISH_GLOSSARY.md  POSITIVE_EVOLUTION.md  README.md  ROADMAP.md  ROADMAP_TO_100.md  SECURITY.md  TRUSTED_PUBLISHING_SETUP.md  cypress.config.ts  docker-compose.yml  eslint.config.mjs  fix-actions.py  instrumentation.node.ts  instrumentation.ts  jest.config.js  justfile  lighthouserc.json  next.config.ts  package-lock.json  package.json  (+7 more)
.Jules/: bolt.md  palette.md  sentinel.md
.agents/: README.md
.changeset/: grok-mcop-100-symbiosis-lockin.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  FUNDING.yml  PROJECT_BOARD_TEMPLATE.md  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
.jules/: README.md  bolt.md  palette.md  sentinel.md
apps/desktop/src-tauri/: Cargo.toml  osv-scanner.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: audit.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
arc_prize_2026/: README.md  conftest.py  pyproject.toml  requirements.txt
arc_prize_2026/arc_agi2/: __init__.py  __main__.py  cli.py  grid.py  scoring.py  solve.py  submission.py  task.py
arc_prize_2026/arc_agi2/solvers/: __init__.py  base.py  primitives.py
arc_prize_2026/data/: .gitignore  README.md  sample_challenges.json  sample_solutions.json
arc_prize_2026/notebooks/: arc_prize_2026_submission.ipynb
arc_prize_2026/tests/: helpers.py  test_cli.py  test_grid.py  test_solve.py  test_solvers.py  test_submission_scoring.py
artefacts/: L0-summary.md  L1-code-scanning-alerts-open.json  L1-code-scanning-alerts-summary.json  L1-code-scanning-alerts.md  L1-debt-markers-high-signal.txt  L1-debt-markers.txt  baseline-meta.txt  run1-POSITIVE_IMPACT_REPORT.md  run1-audit-ledger.jsonl  run1-positive-resonance-ledger.md  run2-POSITIVE_IMPACT_REPORT.md  run2-audit-ledger.jsonl  run2-positive-resonance-ledger.md
audit/: bidir-organelle-full-audit-context-demo.md  grok-build-tui-fusion-status.md  grok-build-tui-host-activation.json  grok-build-tui-mcop-100-symbiosis-lockin.md  last-push-guardian-decision.json  ledger.jsonl  organelle-triad-ETCH_MERGE-2026-06-13.md  positive-impact-attestation.json  positive-resonance-ledger.md
cuda_server/: Dockerfile  docker-compose.yml  pyproject.toml
cuda_server/mcop_cuda_server/: __init__.py  __main__.py  app.py  kernels.py
cuda_server/tests/: test_api.py
cypress/: tsconfig.json
docs/: CANARY_STRINGS.md  CASE_STUDIES.md  CLAIM_AUDIT.md  CONFORMANCE_SPEC.md  CUDA_PHI1_PHI5.md  CUDA_PRODUCTION.md  DECENTRALIZED_AGENT_COORDINATION.md  DESKTOP_APP.md  DISTRIBUTED_CLUSTER_MODE.md  DUE_DILIGENCE_REGISTER.md  EFFICACY_PROGRAM.md  FAST_CONTROL_LOOP.md  FREE_ENERGY_GOVERNOR.md  HOSTED_PROVENANCE_LEDGER.md  HOT_PATH_UNIFICATION.md  MONOREPO.md  POSITIVE_BUILDING.md  POSITIVE_IMPACT_REPORT.md  PROTEOME_LAYER.md  PROVENANCED_FILM.md  RELEASE_PLAYBOOK.md  RESONANCE_CALIBRATION.md  SECURITY-POSTURE-NOTES.md  SEVEN_LAYER_MAPPING.md  STIGMERGIC_TRUST_SUBSTRATE_ROADMAP.md  SUPPLY_CHAIN_TRUST.md  TEMPORAL_STIGMERGY.md  TRUST_SUBSTRATE_ROADMAP.md  VERIFIABLE_RECEIPTS.md  arcagi3-world-model-directive.md
examples/: ONNX_TROUBLESHOOTING.md  cluster_stigmergy_replay.ts  freepik_production_flow.ts  full_film_production_pipeline.ts  grok_imagine_chained.ts  grok_mcop_organelle_experiment.ts  grok_orchestrated_completion.ts  grok_organelle_live_wired_demo.ts  higgsfield_cinematic_pipeline.py  linear_slack_mcp_orchestrator.ts  local_veil_grok_completion.ts  long_form_video_pipeline.ts  magnific_production_flow.ts  magnific_tiered_saas_service.ts  memorypack_direct_forcing.py  multi_platform_orchestrator.ts  onnx_embedding_backend.ts  qwen_orchestrated_completion.ts  zyphra_openai_client.ts
mcop_cuda_server/: Dockerfile  README.md  __init__.py  __main__.py  fastapi_app.py  kernels.py  provenance.py  server.py
mcop_package/: API_REFERENCE.md  DEMO.py  DEPLOYMENT_SUMMARY.md  LICENSE  LICENSE-MIT-LEGACY  NOTICE.md  PROJECT_STRUCTURE.md  README.md  USAGE_GUIDE.md  pyproject.toml  run_arcagi3_agent.py  setup.py  test_arcagi3_agent.py  test_holographic_arcagi3_live.py  test_mcop_runner.py  test_qwen_arcagi3_live.py
mcop_package/fuzz/: fuzz_canonical_encoding.py
mcop_package/mcop/: __init__.py  canonical_encoding.py  cli.py  demo.py  engine.py  evidence_retrieval.py  governance.py  guardian.py  helpers.py  mcop_types.py  merkle.py  model_manifest.py  mycelial.py  pouw.py  reasoning_receipts.py  triad.py  xi_infinity.py
mcop_package/mcop/adapters/: __init__.py  arcagi3_agent.py  base_adapter.py  grok_image_adapter.py  higgsfield_adapter.py
mcop_package/mcop/integrations/: __init__.py  haystack.py  langchain.py  llamaindex.py  triad_harness.py
mcop_package/tests/: test_adapters.py  test_engine_evidence_integration.py  test_engine_robustness.py  test_evidence_retrieval.py  test_flagship_triad.py  test_guardian.py  test_integrations.py  test_merkle.py  test_model_manifest.py  test_organelle_reconstruction.py  test_pouw.py  test_triad_extended_parity.py  test_triad_parity.py  test_version_metadata.py  test_xi_infinity.py
mcop_package/tests/parity/: test_byte_identity_parity.py  test_canonical_merkle_parity.py  test_merkle_tree_parity.py  test_reasoning_receipts_parity.py
models/: anchored_root.json  manifest.json  mcop_cosineRecall.onnx  mcop_encode.onnx  mcop_evolveScore.onnx  mcop_graphAggregate.onnx  mcop_holographicUpdate.onnx  mcop_homeostasis.onnx
public/: llms.txt  robots.txt
scripts/: audit-debt.sh  audit-repo-claims.sh  auditor-kernel-etch.mjs  bench-smoke.mjs  benchmark-arc-evo.mjs  benchmark-arc-ls20.mjs  benchmark-cuda-graph.mjs  benchmark-entropy.ts  benchmark_stigmergy.ts  check-readme-code-blocks.mjs  coverage-badge.mjs  dev.sh  (+27 more)
(+554 files in other folders)
