[build-system]
requires = ["setuptools>=83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-agi2"
version = "0.1.0"
description = "Dependency-free ARC-AGI-2 baseline for the ARC Prize 2026 Kaggle competition."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "MCOP Framework contributors" }]
keywords = ["arc-agi", "arc-prize", "reasoning", "kaggle"]
# No runtime dependencies: the solver core is pure standard library so it runs
# inside an offline Kaggle kernel with nothing to install.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[project.scripts]
arc-agi2 = "arc_agi2.cli:main"

[tool.setuptools.packages.find]
include = ["arc_agi2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
