[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcop-cuda-server"
version = "0.1.0"
description = "Stateless HTTP CUDA bridge for MCOP — implements POST /cuda/{op} for CUDAProvider."
requires-python = ">=3.10"
license = { text = "BUSL-1.1" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=7"]

[project.scripts]
mcop-cuda-server = "mcop_cuda_server.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcop_cuda_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
