[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcop"
version = "3.1.0"
description = "Meta-Cognitive Operating Protocol — A Universal Reasoning Framework"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "M-COP Development Team" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]
llm = ["openai>=1.0"]

[project.scripts]
mcop = "mcop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcop*"]
exclude = ["tests*", "mcop.egg-info*"]
