[build-system]
requires = ["setuptools>=83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcop"
version = "4.0.0"
description = "MCOP Deterministic Triad for NOVA-NEO encoding, Stigmergy v5 memory, Holographic Etch, and evidence-grounded reasoning."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Kevin John Kull", email = "kevin@kullailabs.com" },
  { name = "M-COP Development Team" },
]
maintainers = [
  { name = "Kevin John Kull (Kuonirad)", email = "kevinkull.kk@gmail.com" },
]
license = "Apache-2.0"
keywords = [
  "mcop",
  "nova-neo",
  "stigmergy",
  "holographic-etch",
  "deterministic-ai",
  "meta-cognitive",
  "reasoning",
  "hypothesis-generation",
  "evidence-grounding",
  "decision-support",
  "knowledge-synthesis",
  "multi-modal-reasoning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: General",
]
dependencies = [
  # RFC 8785 (JSON Canonicalization Scheme). Used by
  # ``mcop.canonical_encoding`` to produce SHA-256 Merkle hashes that are
  # byte-identical with the TypeScript ``canonicalize`` package, so the
  # cross-runtime parity test can lock against a single golden roots file.
  "rfc8785>=0.1.4",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=4", "tomli>=2.0; python_version < '3.11'"]
llm = ["openai>=1.0"]

[project.urls]
Homepage = "https://github.com/Kuonirad/MCOP-Framework-2.0"
Documentation = "https://github.com/Kuonirad/MCOP-Framework-2.0/blob/main/mcop_package/README.md"
Repository = "https://github.com/Kuonirad/MCOP-Framework-2.0"
Issues = "https://github.com/Kuonirad/MCOP-Framework-2.0/issues"
Changelog = "https://github.com/Kuonirad/MCOP-Framework-2.0/blob/main/CHANGELOG.md"

[project.scripts]
mcop = "mcop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcop*"]
exclude = ["tests*", "mcop.egg-info*"]

[tool.pytest.ini_options]
testpaths = ["test_*.py", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mcop]
protocol-version = "2.4.0"
